# CPP__webserver__simple_2025

./: CMakeLists.txt  Makefile  README.md  run_webserv.sh
confs/: default.conf  test.conf
confs/invalid_confs/: comments_only.conf  space.conf
cxx_src/: all_AppException.cpp  all_AppException.hpp  all_SignalHandler.cpp  all_SignalHandler.hpp  all_utils.cpp  all_utils.hpp  arg_ProgNameGetter.cpp  arg_ProgNameGetter.hpp  arg_SwitchConfigFile.cpp  arg_SwitchConfigFile.hpp  conf_AppConfig.hpp  conf_AppConfig_0_Ctor_Dtor_Etc.cpp  conf_AppConfig_1.cpp  conf_AppConfig_2_file_string_tokens_lexems.cpp  conf_AppConfig_3_lexems_to_config.cpp  conf_AppConfig_4_lexems_to_location.cpp  conf_AppConfig_5_throw_exception.cpp  conf_AppConfig_6_parser_autoindex.cpp  conf_AppConfig_6_parser_braces.cpp  conf_AppConfig_6_parser_cgi_.cpp  conf_AppConfig_6_parser_cgi_rewrite.cpp  conf_AppConfig_6_parser_client_max_body.cpp  conf_AppConfig_6_parser_error_pages.cpp  conf_AppConfig_6_parser_index_page.cpp  conf_AppConfig_6_parser_listen.cpp  conf_AppConfig_6_parser_method.cpp  conf_AppConfig_6_parser_redirections.cpp  conf_AppConfig_6_parser_root.cpp  conf_AppConfig_6_parser_serv_name.cpp  conf_AppConfig_6_parser_upload.cpp  conf_AppConfig_utils.cpp  conf_Config.cpp  conf_Config.hpp  conf_Lexem.cpp  conf_Lexem.hpp  conf_Location.cpp  conf_Location.hpp  conf_ServerConfig.cpp  conf_ServerConfig.hpp  exec_AppLaunch.cpp  (+78 more)
incls/: wbs_defaults.hpp  wbs_err_messages.hpp  wbs_shell_colors.hpp  wbs_typedef_enum.hpp
test/: requests.txt
test/body_limit/: error_413.html  success
test/catch_redirect/: catch_redirect.html
test/cgi/: error_400.html  error_404.html  error_405.html
test/cgi/chunk_response/: script_generate_chunks.cgi  script_generate_chunks.cpp
test/cgi/correct_directory/: script_relative_dir.cgi  test_fork
test/cgi/env/: script_env_use.cgi  script_env_use.cpp
test/cgi/infinite_loop/: script_infinite_loop.cgi  script_infinite_loop.cpp
test/cgi/post/: script_capitalize.cgi  script_capitalize.cpp
test/default_page/: default_page.html
test/error_page/: error_404.html
test/post_delete/: error_400.html
test/post_only/: can_not_delete_this  error_405.html
tests/: index.html  test.conf  test_file
tests/cgi/correct_directory/: cgi_relative_dir_source.file  script_relative_dir.cpp  test_fork.cpp
tests/cgi/get_post/: script_get_post.cgi  script_get_post.cpp
tests/cgi/infinite_loop/: script_infinite_loop.cgi  script_infinite_loop.cpp
tests/cgi/to_upper/: script_capitalize.cgi  script_capitalize.cpp
tests/confs_invalid/: port_duplicated.conf
tests/confs_valid/: one_line.conf
tests/error_pages/: error_400.html  error_403.html  error_404.html  error_405.html  error_408.html  error_500.html
tests/post/: append_existing_file  permission_denied_file  source_for_upload_file  upload_file
tests/routed_response/: response.routed
tests/special_files/: test_file
tests/upload_denied/: source_for_upload_file
website_42/: error_400.html  error_404.html  error_default.html  index.html  message_default.html  one_line.html
website_43/: index.html  message_default.html
